--- a/package.json
+++ b/package.json
@@ -11,18 +11,31 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "@types/leaflet": "^1.9.21",
+    "@types/leaflet-polylinedecorator": "^1.6.5",
     "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
+    "fuzzysort": "^3.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "konva": "^9.3.1",
+    "leaflet": "^1.9.4",
+    "leaflet-ant-path": "^1.3.0",
+    "leaflet-polylinedecorator": "^1.6.0",
     "lucide-react": "^0.323.0",
     "pdfjs-dist": "^4.10.38",
+    "quill-image-resize-module-react": "^3.0.0",
+    "re-resizable": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^19.2.4",
     "react-konva": "^18.2.10",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^4.0.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^2.2.1",
     "tesseract.js": "^7.0.0",
     "use-image": "^1.1.4",
