--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,16 @@
             "source": "/(.*)",
             "destination": "/index.html"
         }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Content-Security-Policy",
+                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com/gsi/client https://apis.google.com; connect-src 'self' https://www.googleapis.com https://accounts.google.com https://*.supabase.co; img-src 'self' data: https://*.googleusercontent.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-src https://accounts.google.com https://content.googleapis.com;"
+                }
+            ]
+        }
     ]
 }
