--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
+    "resend": "^6.9.2",
     "tailwind-merge": "^2.2.1",
     "tesseract.js": "^7.0.0",
     "use-image": "^1.1.4",
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
