--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,15 @@
             "headers": [
                 {
                     "key": "Content-Security-Policy",
-                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com/gsi/client https://apis.google.com; connect-src 'self' https://www.googleapis.com https://accounts.google.com https://*.supabase.co; img-src 'self' data: https://*.googleusercontent.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; frame-src https://accounts.google.com https://content.googleapis.com;"
+                    "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com https://accounts.google.com/gsi/client https://content.googleapis.com; connect-src 'self' https://ufwtohehgttrlxdjmufj.supabase.co https://*.supabase.co wss://ufwtohehgttrlxdjmufj.supabase.co wss://*.supabase.co https://www.googleapis.com https://content.googleapis.com https://accounts.google.com https://drive.googleapis.com https://www.googletagmanager.com; img-src 'self' data: blob: https://*.googleusercontent.com https://*.googleapis.com https://drive.google.com https://ufwtohehgttrlxdjmufj.supabase.co https://*.supabase.co https://lh3.googleusercontent.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' data: https://fonts.gstatic.com; frame-src https://accounts.google.com https://content.googleapis.com https://drive.google.com; worker-src 'self' blob:; manifest-src 'self';"
+                },
+                {
+                    "key": "X-Content-Type-Options",
+                    "value": "nosniff"
+                },
+                {
+                    "key": "Referrer-Policy",
+                    "value": "no-referrer-when-downgrade"
                 }
             ]
         }
